--- a/CrowdBandung/app/src/main/res/layout/activity_cctv_page.xml
+++ b/CrowdBandung/app/src/main/res/layout/activity_cctv_page.xml
@@ -34,7 +34,7 @@
     <!--        app:layout_constraintStart_toStartOf="parent"-->
     <!--        app:layout_constraintTop_toBottomOf="@+id/imageView3" />-->
 
-    <com.google.android.exoplayer2.ui.PlayerControlView
+    <com.google.android.exoplayer2.ui.StyledPlayerView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -43,6 +43,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
-    </com.google.android.exoplayer2.ui.PlayerControlView>
+    </com.google.android.exoplayer2.ui.StyledPlayerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
